--- a/config/job.properties
+++ b/config/job.properties
@@ -1,8 +1,9 @@
 kafka.bootstrap.servers=pnovokshonov-1.pnovokshonov.root.hwx.site:9092,pnovokshonov-2.pnovokshonov.root.hwx.site:9092,pnovokshonov-3.pnovokshonov.root.hwx.site:9092
 ipdr.input.topic=ipdr_input
 ipdr.output.topic=ipdr_output
-window_size=1
+window.size=1
 fsysOutput=file:///tmp/ipdr_usage
+checkpoint.interval.millis=30000
 
 #Job settings for Secured (Kerberos/TLS) cluster
 #kafka.bootstrap.servers=pnovoksh-kafka-cluster-corebroker2.se-sandb.a465-9q4k.cloudera.site:9093, pnovoksh-kafka-cluster-corebroker1.se-sandb.a465-9q4k.cloudera.site:9093, pnovoksh-kafka-cluster-corebroker0.se-sandb.a465-9q4k.cloudera.site:9093
