--- a/config/job.properties
+++ b/config/job.properties
@@ -1,8 +1,8 @@
 kafka.bootstrap.servers=pnovokshonov-1.pnovokshonov.root.hwx.site:9092,pnovokshonov-2.pnovokshonov.root.hwx.site:9092,pnovokshonov-3.pnovokshonov.root.hwx.site:9092
 ipdr.input.topic=ipdr_input
 ipdr.output.topic=ipdr_output
-window.size=1
-fsysOutput=file:///tmp/ipdr_usage
+window.size.min=5
+fsysOutput=hdfs:///user/flink/ipdr_usage
 checkpoint.interval.millis=30000
 
 #Job settings for Secured (Kerberos/TLS) cluster
