--- a/config/job.properties
+++ b/config/job.properties
@@ -1,9 +1,9 @@
 kafka.bootstrap.servers=pnovokshonov-1.pnovokshonov.root.hwx.site:9092,pnovokshonov-2.pnovokshonov.root.hwx.site:9092,pnovokshonov-3.pnovokshonov.root.hwx.site:9092
-ipdr.input.topic=ipdr_input
-ipdr.output.topic=ipdr_output
-window.size.min=5
-fsysOutput=hdfs:///user/flink/ipdr_usage
-checkpoint.interval.millis=30000
+ipdr.input.topic=ipdr_input_test
+ipdr.output.topic=ipdr_output_test
+window.size.min=1
+fsysOutput=file:///tmp/ipdr_usage
+checkpoint.interval.millis=3000
 
 #Job settings for Secured (Kerberos/TLS) cluster
 #kafka.bootstrap.servers=pnovoksh-kafka-cluster-corebroker2.se-sandb.a465-9q4k.cloudera.site:9093, pnovoksh-kafka-cluster-corebroker1.se-sandb.a465-9q4k.cloudera.site:9093, pnovoksh-kafka-cluster-corebroker0.se-sandb.a465-9q4k.cloudera.site:9093
